Update html content

--- a/python-server_side_rendering/templates/contact.html
+++ b/python-server_side_rendering/templates/contact.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     {% include 'header.html' %}
-    <h1>Contact us</h1>
+    <h1>Contact Us</h1>
     <p>This is the "Contact us" page.</p>
     {% include 'footer.html' %}
 </body>
