--- a/python-server_side_rendering/templates/about.html
+++ b/python-server_side_rendering/templates/about.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     {% include 'header.html' %}
-    <h1>About us</h1>
+    <h1>About Us</h1>
     <p>This is the "About us" page.</p>
     {% include 'footer.html' %}
 </body>
